correcting hero image on mobile

--- a/RDX.SW/src/less/core/layout.less
+++ b/RDX.SW/src/less/core/layout.less
@@ -129,8 +129,12 @@ body {
                     max-width: 100%;
 
                     img {
-                        width: auto;
-                        height: 80vh;
+                        width: 100%;
+
+                        @media @mediaQueryBreakpointMd {
+                          width: auto;
+                          height: 80vh;
+                        }
                     }
 
                 }
@@ -203,7 +207,7 @@ body {
                     }
 
                     @media @mediaQueryBreakpointMd {
-                        -ms-grid-columns: @page-margin 1fr auto 1fr @padding-unit 60%;
+                        -ms-grid-columns: @page-margin 0 auto 1fr @padding-unit auto;
                         -ms-grid-rows: 1fr auto 1fr;
 
                         .main-content {
@@ -219,14 +223,15 @@ body {
                         }
 
                         @media screen and @mediaQueryVerticalBreakpointSm {
-                            -ms-grid-columns: @page-margin 1fr auto 1fr @padding-unit 40%;
+                            -ms-grid-columns: @page-margin 1fr auto 1fr @padding-unit auto;
                         }
                     }
+
                 }
 
                 // Required Setting [template-contentCard] - Content right / hero-img left
                 &.content-right {
-                    -ms-grid-columns: @page-margin 50% auto @page-margin;;
+                    -ms-grid-columns: @page-margin 50% auto @page-margin;
                     -ms-grid-rows: 1fr auto auto 1fr;
 
                    .main-content {
@@ -246,7 +251,7 @@ body {
                     }
 
                     @media @mediaQueryBreakpointMd {
-                        -ms-grid-columns: 50% @padding-unit 1fr auto 1fr @page-margin;
+                        -ms-grid-columns: auto @padding-unit 1fr auto 1fr @page-margin;
                         -ms-grid-rows: 1fr auto 1fr;
 
                        .main-content {
