--- a/RDX.SW/src/less/core/type.less
+++ b/RDX.SW/src/less/core/type.less
@@ -131,6 +131,7 @@ h6 {
 sup {
   vertical-align: top;
   line-height: 1;
+  font-size: 11px;
 }
 
 //-----------------------------------------------------------------------------
